# comm4190_F25_Using_LLMs_Blog

./: .nojekyll  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
posts/000_test_post/: index.html
posts/001_an_llm_conversation/: an_llm_conversation.html  an_llm_conversation.ipynb  conversation_transcript_1.txt  conversation_transcript_2.txt  conversation_transcript_3.txt  conversation_transcript_4.txt
posts/002_another_llm_conversation/: another_llm_conversation.html  another_llm_conversation.ipynb  conversation_transcript_1.txt  conversation_transcript_2.txt  conversation_transcript_3.txt  conversation_transcript_4.txt
posts/003_approaching_a_true_discussion/: Spontaneity.html  Spontaneity.ipynb  conversation_transcript_1.txt  conversation_transcript_2.txt  conversation_transcript_3.txt  conversation_transcript_4.txt
posts/004_going_to_stop_you_right_there/: conversation_1.txt  conversation_2.txt  conversation_3.txt  conversation_4.txt  going_to_stop_you_right_there.html  going_to_stop_you_right_there.ipynb
posts/005_goldfish/: conversation_1.txt  conversation_2.txt  conversation_3.txt  goldfish.html  goldfish.ipynb
posts/006_these_strange_new_minds_reaction_1/: these_strange_new_minds_reaction.html  these_strange_new_minds_reaction.ipynb
posts/007_developing_identities/: conversation_1.txt  conversation_2.txt  conversation_3.txt  conversation_4.txt  developing_identities.html  developing_identities.ipynb
posts/007_looking_closer/: looking_closer.html  looking_closer.ipynb
(+65 files in other folders)
