[project]
name = "comm4190-f25-using-llms-blog"
version = "0.1.0"
description = "Blog env"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "convokit>=4.0.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "openai>=1.54.0",
    "python-dotenv>=1.0.1",
    "spacy>=3.8.11",
]
