[project]
name = "comm4190-f25-using-llms-blog"
version = "0.1.0"
description = "Blog env"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "convokit>=4.0.0",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "networkx>=3.6.1",
    "openai>=1.54.0",
    "pip>=25.3",
    "python-dotenv>=1.0.1",
    "spacy>=3.8.11",
]
